--- a/_site.yml
+++ b/_site.yml
@@ -5,5 +5,5 @@ navbar:
       href: index.html
     - text: "Kayden"
       href: kayden.html
-    - text: "leah"
-      href: leah.html 
+    - text: "Leah"
+      href: Leah.html 
